phase12-pihole/plex/media-ingress-public.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "default"
  name: "media.k8shome.net"
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - media.k8shome.net
      secretName: letsencrypt-staging
  rules:
  - host: media.k8shome.net
    http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: "transmission-transmission-openvpn"
            port:
              number: 80
      - path: "/transmission"
        pathType: ImplementationSpecific
        backend:
          service:
            name: "transmission-transmission-openvpn"
            port:
              number: 80
      - path: "/sonarr"
        pathType: ImplementationSpecific
        backend:
          service:
            name: "sonarr"
            port:
              number: 80
      - path: "/radarr"
        pathType: Prefix
        backend:
          service:
            name: "radarr"
            port:
              number: 80
      - path: "/jackett"
        pathType: ImplementationSpecific
        backend:
          service:
            name: "jackett"
            port:
              number: 80
