phase12-pihole/plex/media-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: "media"
  name: "media-ingress"
spec:
  rules:
  - host: "media.k8s.home.io"
    http:
      paths:
      - path: "/transmission"
        backend:
          serviceName: "transmission-transmission-openvpn"
          servicePort: 80
      - path: "/sonarr"
        backend:
          serviceName: "sonarr"
          servicePort: 80
      - path: "/jackett"
        backend:
          serviceName: "jackett"
          servicePort: 80
      - path: "/radarr"
        backend:
          serviceName: "radarr"
          servicePort: 80
      - path: "/ngax"
        backend:
          serviceName: "duplicati"
          servicePort: 80
      - path: "/organizr"
        backend:
          serviceName: "organizr"
          servicePort: 80
      - path: "/ombi"
        backend:
          serviceName: "ombi"
          servicePort: 80
      - path: "/"
        backend:
          serviceName: "plex-kube-plex"
          servicePort: 32400
